# my_application

./: .gitignore  cloudbuild.yaml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: utils.py
backend/configs/: Environment.py
backend/my_app/: main.py
backend/my_app/api/: dependencies.py  main.py
backend/my_app/api/routes/: login.py  portfolio_route.py  question_route.py  scan_pdf_route.py  users.py
backend/my_app/common/: util.py
backend/my_app/common/configs/: settings.py
backend/my_app/common/models/: portfolio_dto.py  question_dto.py
backend/my_app/data/repositories/: cloud_storage_repository_impl.py  genai_repository_impl.py  pdf_file_repository_impl.py  portfolio_repository_impl.py  secret_manager_repository_impl.py
backend/my_app/data/resources/: portfolio-data.json
backend/my_app/domain/repository_interfaces/: file_repository.py  genai_repository.py  portfolio_repository.py  secret_manager_repository.py  storage_repository.py
backend/my_app/domain/usecases/: genai_use_cases.py  read_portfolio_use_case.py  secret_manager_use_cases.py
backend/portfolio/: main.py
backend/portfolio/alembic/: env.py
backend/portfolio/api/: dependencies.py  deps.py  main.py
backend/portfolio/api/routes/: items.py  login.py  portfolio_route.py  scan_pdf_route.py  users.py  utils.py
backend/portfolio/common/configs/: settings.py
backend/portfolio/core/: db.py  security.py
backend/portfolio/models/: LoginSchema.py
backend/portfolio/tests/: conftest.py
backend/portfolio/tests/crud/: test_user.py
backend/tests/: conftest.py  test_main.py
(+151 files in other folders)
