[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0",
    "fastapi[standard]>=0.115.12",
    "google-cloud-secret-manager>=2.24.0",
    "google-cloud-storage>=3.1.0",
    "google-crc32c>=1.7.1",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-google-genai>=2.0.10",
    "pypdf2>=3.0.1",
]
